# tic-tac-toe

./: CMakeCache.txt  CMakeLists.txt  Game_loop.hpp  Game_structure.hpp  README.md  bugfix.txt  cmakeinstructions.txt  game_structure.cpp  main.cpp  secondory_functions.cpp
cmake/: cmakedependencies.cmake
src/: CMakeLists.txt  Game_structure.hpp  game_structure.cpp  main.cpp  secondoryfuncs.cpp
